# muzip

./: CMakeLists.txt  LICENSE  README
src/: Bloque.h  Matriz.hpp  Pixel.h  main.cc  types.h
src/compr/: GHT.hpp  compr.h  zipfuncs.cc  zipfuncs.h
src/huffman/: HuffmanNode.hpp  HuffmanTree.hpp  huffman.cc  huffman.h
src/ppm/: io.cc  io.h  ppm.h
